Fixed broken links

--- a/Overview.ipynb
+++ b/Overview.ipynb
@@ -9,12 +9,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -156,23 +152,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Ray Advanced\n",
+    "### Advanced Ray\n",
     "\n",
-    "Directory: `ray-advanced`\n",
+    "Directory: `advanced-ray`\n",
     "\n",
-    "This tutorial provides a deeper introduction to Ray's core API. It also explores why Ray was created, what problems it is designed to solve, and how it works behind the scenes.\n",
+    "Go through the [_Crash Course_](#ray-crash-course) first if you are new to Ray. Then return to this tutorial, which begins with an explanation of why Ray was created, what problems it solves, and then dives into more advanced API usage, profiling and debugging applications, and how Ray works behind the scenes.\n",
     "\n",
-    "This tutorial assumes you've gone through the Once you've completed the Ray core material, you can explore the rest of the modules in any order.\n",
+    "This is the place to start. This tutorial introduces you to Ray, why it was created, what problems it solves, how to use it, and how it works behind the scenes.\n",
     "\n",
     "| #  | Lesson | Description |\n",
     "| :- | :----- | :---------- |\n",
-    "| 00 | [Overview](ray-advanced/00-Overview.ipynb) | A _table of contents_ for this tutorial. |\n",
-    "| 01 | [Introduction](ray-advanced/01-Introduction.ipynb) | Start in this notebook if you want an explanation of the origin and motivations for Ray. |\n",
-    "| 02 | [Task Parallelism - Part1](ray-advanced/02-TaskParallelism-Part1.ipynb) | Part 1 of the introduction to several of the Ray API calls and how to use them to turn synchronous python _functions_ into asynchronous Ray _tasks_. |\n",
-    "| 03 | [Task Parallelism - Part2](ray-advanced/03-TaskParallelism-Part2.ipynb) | Part 2 of the exploration of Ray _tasks_. |\n",
-    "| 04 | [Distributed State with Actors](ray-advanced/04-DistributedStateWithActors.ipynb) | Ray _actors_ are the asynchronous analog of Python classes, used to extend the concept of a _task_ to support management of distributed state. |\n",
-    "| 05 | [Exploring Ray API Calls](ray-advanced/05-ExploringRayAPICalls.ipynb) | The Ray API has other API calls for more advanced scenarios, which are surveyed in this optional lesson. We'll also look at options you can pass to the API calls we've already learned. |\n",
-    "| 06 | [Recap Tips and Tricks](ray-advanced/06-RecapAndTipsTricks.ipynb) | The final lesson recaps what we've learned and summarizes the tips and tricks we've covered, plus adds a few more. |"
+    "| 00 | [Overview](advanced-ray/00-Overview.ipynb) | A _table of contents_ for this tutorial. |\n",
+    "| 01 | [Why Ray?](advanced-ray/01-Why-Ray.ipynb) | Start in this notebook if you want an explanation of the origin and motivations for Ray. |\n",
+    "| 02 | [Task Parallelism - Part1](advanced-ray/02-Task-Parallelism-Part1.ipynb) | Part 1 of the introduction to several of the Ray API calls and how to use them to turn synchronous python _functions_ into asynchronous Ray _tasks_. |\n",
+    "| 03 | [Task Parallelism - Part2](advanced-ray/03-Task-Parallelism-Part2.ipynb) | Part 2 of the exploration of Ray _tasks_. |\n",
+    "| 04 | [Distributed State with Actors](advanced-ray/04-Distributed-State-with-Actors.ipynb) | Ray _actors_ are the asynchronous analog of Python classes, used to extend the concept of a _task_ to support management of distributed state. |\n",
+    "| 05 | [Exploring Ray API Calls](advanced-ray/05-Exploring-Ray-API-Calls.ipynb) | The Ray API has other API calls for more advanced scenarios, which are surveyed in this optional lesson. We'll also look at options you can pass to the API calls we've already learned. |\n",
+    "| 06 | [Recap Tips and Tricks](advanced-ray/06-Recap-And-Tips-Tricks.ipynb) | The final lesson recaps what we've learned and summarizes the tips and tricks we've covered, plus adds a few more. |\n",
+    "\n",
+    "Once you've completed the Ray core material, you can explore the rest of the tutorials in any order."
    ]
   },
   {
