--- a/advanced-ray/00-Advanced-Ray-Overview.ipynb
+++ b/advanced-ray/00-Advanced-Ray-Overview.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Ray Core - A Deeper Dive - Overview"
+    "# Advanced Ray - Overview"
    ]
   },
   {
@@ -55,17 +55,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Ray Core Tutorial Guide\n",
+    "## Advanced Ray Tutorial Guide\n",
     "\n",
     "| #  | Lesson | Description |\n",
     "| :- | :----- | :---------- |\n",
     "| 00 | [Overview](00-Overview.ipynb) | A _table of contents_ for this tutorial. |\n",
-    "| 01 | [Introduction](01-Introduction.ipynb) | Start in this notebook if you want an explanation of the origin and motivations for Ray. |\n",
-    "| 02 | [Task Parallelism - Part1](02-TaskParallelism-Part1.ipynb) | Part 1 of the introduction to several of the Ray API calls and how to use them to turn synchronous python _functions_ into asynchronous Ray _tasks_. |\n",
-    "| 03 | [Task Parallelism - Part2](03-TaskParallelism-Part2.ipynb) | Part 2 of the exploration of Ray _tasks_. |\n",
-    "| 04 | [Distributed State with Actors](04-DistributedStateWithActors.ipynb) | Ray _actors_ are the asynchronous analog of Python classes, used to extend the concept of a _task_ to support management of distributed state. |\n",
-    "| 05 | [Exploring Ray API Calls](05-ExploringRayAPICalls.ipynb) | The Ray API has other API calls for more advanced scenarios, which are surveyed in this optional lesson. We'll also look at options you can pass to the API calls we've already learned. |\n",
-    "| 06 | [Recap Tips and Tricks](06-RecapAndTipsTricks.ipynb) | The final lesson recaps what we've learned and summarizes the tips and tricks we've covered, plus adds a few more. |"
+    "| 01 | [Why Ray?](01-Why-Ray.ipynb) | Start in this notebook if you want an explanation of the origin and motivations for Ray. |\n",
+    "| 02 | [Task Parallelism - Part1](02-Task-Parallelism-Part1.ipynb) | Part 1 of the introduction to several of the Ray API calls and how to use them to turn synchronous python _functions_ into asynchronous Ray _tasks_. |\n",
+    "| 03 | [Task Parallelism - Part2](03-Task-Parallelism-Part2.ipynb) | Part 2 of the exploration of Ray _tasks_. |\n",
+    "| 04 | [Distributed State with Actors](advanced-ray/04-Distributed-State-with-Actors.ipynb) | Ray _actors_ are the asynchronous analog of Python classes, used to extend the concept of a _task_ to support management of distributed state. |\n",
+    "| 05 | [Exploring Ray API Calls](05-Exploring-Ray-API-Calls.ipynb) | The Ray API has other API calls for more advanced scenarios, which are surveyed in this optional lesson. We'll also look at options you can pass to the API calls we've already learned. |\n",
+    "| 06 | [Recap Tips and Tricks](06-Recap-And-Tips-Tricks.ipynb) | The final lesson recaps what we've learned and summarizes the tips and tricks we've covered, plus adds a few more. |"
    ]
   },
   {
