Added exercises for crash course lesson 01

--- a/Overview.ipynb
+++ b/Overview.ipynb
@@ -144,6 +144,8 @@
     "| 00 | [Overview](ray-crash-course/00-Ray-Crash-Course-Overview.ipynb) | A _table of contents_ for this tutorial. |\n",
     "| 01 | [Ray Crash Course: Tasks](ray-crash-course/01-Ray-Crash-Course-Tasks.ipynb) | Understanding how Ray converts normal Python functions into distributed _stateless tasks_. |\n",
     "| 02 | [Ray Crash Course: Actors](ray-crash-course/02-Ray-Crash-Course-Actors.ipynb) | Understanding how Ray converts normal Python classes into distributed, _stateful actors_. |\n",
+    "| 03 | [Adopting Ray](03-Adopting-Ray.ipynb)             | Ray drop-in replacements for common parallelism APIs, about the Ray community, etc. |\n",
+    "| 04 | [Running Ray Clusters](04-Running-Ray-Clusters.ipynb) | How to run Ray in a clustered environment, submit your work to it, and integrate with your local development process. |\n",
     "\n",
     "Once you've completed this tutorial, go through [_Ray Core - Advanced_](#user-content-ray-core---advanced) or explore one of the ML-related library tutorials, in any order."
    ]
