--- a/ray-crash-course/00-Ray-Crash-Course-Overview.ipynb
+++ b/ray-crash-course/00-Ray-Crash-Course-Overview.ipynb
@@ -66,7 +66,9 @@
     "| :- | :------------------------------------------------ | :-------------------------------------------------------- |\n",
     "| 00 | [Overview](00-Ray-Crash-Course-Overview.ipynb)    | This notebook.                                            |\n",
     "| 01 | [Ray Tasks](01-Ray-Crash-Course-Tasks.ipynb)      | Scaling _stateless_ work using Ray _tasks_.               |\n",
-    "| 02 | [Ray Actors](02-Ray-Crash-Course-Actors.ipynb)    | Scaling work with distributed _state_ using Ray _actors_. |"
+    "| 02 | [Ray Actors](02-Ray-Crash-Course-Actors.ipynb)    | Scaling work with distributed _state_ using Ray _actors_. |\n",
+    "| 03 | [Adopting Ray](03-Adopting-Ray.ipynb)             | Ray drop-in replacements for common parallelism APIs, about the Ray community, etc. |\n",
+    "| 04 | [Running Ray Clusters](04-Running-Ray-Clusters.ipynb) | How to run Ray in a clustered environment, submit your work to it, and integrate with your local development process. |"
    ]
   },
   {
