--- a/ray-crash-course/02-Ray-Crash-Course-Actors.ipynb
+++ b/ray-crash-course/02-Ray-Crash-Course-Actors.ipynb
@@ -4,6 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Ray Crash Course - Actors\n",
+    "\n",
+    "Using Ray _tasks_ is great for distributing work around a cluster, but we've said nothing so far about managing distributed _state_, one of the big challenges in distributed computing. Ray tasks are great for _stateless_ computation, but we need something for _stateful_ computation. \n",
+    "\n",
+    "Just as Ray tasks extend the familiar concept of Python _functions_, Ray addresses stateful computation using by extending the familiar concept of Python _classes_ to become Ray _actors_."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## What We Mean by Distributed State\n",
     "\n",
     "If you've worked with data processing libraries like [Pandas](https://pandas.pydata.org/) or big data tools like [Apache Spark](https://spark.apache.org), you know that they provide rich features for manipulating large, structured _data sets_, i.e., the analogs of tables in a database. Some tools even support partitioning of these data sets over clusters for scalability.\n",
