Final updates before merging back to master

--- a/advanced-ray/00-Advanced-Ray-Overview.ipynb
+++ b/advanced-ray/00-Advanced-Ray-Overview.ipynb
@@ -57,14 +57,14 @@
    "source": [
     "## Advanced Ray Tutorial Guide\n",
     "\n",
+    "\n",
     "| #  | Lesson | Description |\n",
     "| :- | :----- | :---------- |\n",
     "| 00 | [Overview](00-Overview.ipynb) | A _table of contents_ for this tutorial. |\n",
     "| 01 | [Why Ray?](01-Why-Ray.ipynb) | Start in this notebook if you want an explanation of the origin and motivations for Ray. |\n",
-    "| 02 | [Task Parallelism - Part1](02-Task-Parallelism-Part1.ipynb) | Part 1 of the introduction to several of the Ray API calls and how to use them to turn synchronous python _functions_ into asynchronous Ray _tasks_. |\n",
-    "| 03 | [Task Parallelism - Part2](03-Task-Parallelism-Part2.ipynb) | Part 2 of the exploration of Ray _tasks_. |\n",
-    "| 04 | [Distributed State with Actors](advanced-ray/04-Distributed-State-with-Actors.ipynb) | Ray _actors_ are the asynchronous analog of Python classes, used to extend the concept of a _task_ to support management of distributed state. |\n",
-    "| 05 | [Exploring Ray API Calls](05-Exploring-Ray-API-Calls.ipynb) | The Ray API has other API calls for more advanced scenarios, which are surveyed in this optional lesson. We'll also look at options you can pass to the API calls we've already learned. |"
+    "| 02 | [Ray Tasks Revisited](02-Ray-Tasks-Revisited.ipynb) | More exploration of `ray.wait()` usage patterns, task dependencies and their management, task profiling techniques, and task scheduling. |\n",
+    "| 03 | [Ray Actors Revisited](03-Ray-Actors-Revisited.ipynb) | A more in-depth look at Actor scheduling under the hood and profiling performance using the _Ray Dashboard_. |\n",
+    "| 04 | [Exploring Ray API Calls](04-Exploring-Ray-API-Calls.ipynb) | The Ray API has other API calls for more advanced scenarios, which are surveyed in this optional lesson. Options you can pass to the API calls already learned are explored. |"
    ]
   },
   {
