--- a/advanced-ray/02-Ray-Tasks-Revisited.ipynb
+++ b/advanced-ray/02-Ray-Tasks-Revisited.ipynb
@@ -4,27 +4,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Ray Concepts - Task Parallelism (Part 2)\n",
+    "# Ray Tasks Revisited\n",
     "\n",
-    "The previous lesson explored Ray's core concepts and how they work. We learned how to define Ray _tasks_, run them, and retrieve the results. We also started learning about how Ray schedules tasks in a distributed environment.\n",
+    "The [Ray Crash Course](../ray-crash-course/00-Ray-Crash-Course-Overview.ipynb) introduced the core concepts of Ray's API and how they parallelize work. Specifically, we learned how to define Ray _tasks_, run them, and retrieve the results. \n",
     "\n",
-    "This lesson completes the discussion of Ray tasks by exploring how task dependencies are handled. We'll finish with a look under the hood at Ray's architecture and runtime behavior.\n",
+    "This lesson explores Ray tasks in greater depth, including how task dependencies are handled automatically by Ray, `ray.wait()` usage patterns, profiling tasks, and a peak under the hood at Ray's architecture and runtime behavior.\n",
     "\n",
     "> **Tip:** Recall that the [Ray Package Reference](https://ray.readthedocs.io/en/latest/package-ref.html) in the [Ray Docs](https://ray.readthedocs.io/en/latest/) is useful for exploring the API features we'll learn."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# If you are running on Google Colab, uncomment and run the following linkes\n",
-    "# to install the necessary dependencies.\n",
-    "\n",
-    "# print(\"Setting up colab environment\")\n",
-    "# !pip install -q ray\n",
-    "# !pip install -q bokeh"
+    "**TODO**: THE REST OF THIS MATERIAL IS THE ORIGINAL CONTENT THAT NEEDS TO BE REFACTORED."
    ]
   },
   {
