--- a/advanced-ray/03-Ray-Actors-Revisited.ipynb
+++ b/advanced-ray/03-Ray-Actors-Revisited.ipynb
@@ -4,15 +4,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Ray Concepts - Distributed State with Actors\n",
+    "# Ray Actors Revisited\n",
     "\n",
-    "The previous lessons explored Ray's core concepts and how they work. We learned how to define Ray _tasks_, run them, and retrieve the results. We learned how Ray schedules tasks in a distributed environment and we developed our intuition about how best to use Ray.\n",
+    "The [Ray Crash Course](../ray-crash-course/00-Ray-Crash-Course-Overview.ipynb) introduced the core concepts of Ray's API and how they parallelize work. Specifically, we learned how to define Ray _tasks_, run them, and retrieve the results. \n",
     "\n",
-    "However, we haven't discussed one of the biggest challenges facing developers of distributed systems; how to manage the global state of our application, which is now distributed across the cluster. \n",
-    "\n",
-    "This lesson introduces Ray's _actor_ mechanism for addressing this challenge. We'll see that actors extend the familiar idea of Python classes, which implement the familiar object-oriented design idiom of grouping and encapsulating bits of state, along with methods to manipulate and expose that state.\n",
+    "This lesson explores Ray actors in greater depth, including profiling actor behavior.\n",
     "\n",
     "> **Tip:** Recall that the [Ray Package Reference](https://ray.readthedocs.io/en/latest/package-ref.html) in the [Ray Docs](https://ray.readthedocs.io/en/latest/) is useful for exploring the API features we'll learn."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**TODO**: THE REST OF THIS MATERIAL IS THE ORIGINAL CONTENT THAT NEEDS TO BE REFACTORED."
    ]
   },
   {
@@ -43,20 +48,6 @@
     "We'll use an implementation of Conway's Game of Life as a nontrivial example of maintaining state, the current grid of living and dead cells. We'll see how to leverage Ray to scale it.\n",
     "\n",
     "> **Note:** Sadly, [John Horton Conway](https://en.wikipedia.org/wiki/John_Horton_Conway), the inventor of this automaton, passed away from COVID-19 on April 11, 2020"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# If you are running on Google Colab, uncomment and run the following linkes\n",
-    "# to install the necessary dependencies.\n",
-    "\n",
-    "# print(\"Setting up colab environment\")\n",
-    "# !pip install -q ray\n",
-    "# !pip install -q holoviews bokeh"
    ]
   },
   {
