--- a/ray-crash-course/solutions/solutions.ipynb
+++ b/ray-crash-course/solutions/solutions.ipynb
@@ -705,6 +705,15 @@
     "    if data_ns[i] >= ray_data_ns[i]:\n",
     "        print(f'Crossing point: N = {small_ns[i]}')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 02 Ray Crash Course - Actors - Exercise 1\n",
+    "\n",
+    "Solutions for the Actors exercises are TODO."
+   ]
   }
  ],
  "metadata": {
