--- a/Overview.ipynb
+++ b/Overview.ipynb
@@ -8,33 +8,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<style>\n",
-       "    table {margin-left: 0 !important;}\n",
-       "</style>\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "%%html \n",
-    "<style>\n",
-    "    table {margin-left: 0 !important;}\n",
-    "</style>"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -67,6 +40,8 @@
     "## Which Tutorials Are Right for Me?\n",
     "\n",
     "Here is a recommended reading list, based on your interests:\n",
+    "\n",
+    "> **TODO:** JUPYTER LAB FORCES RIGHT ALIGNMENT FOR TABLES, NEGATING THEIR UTILITY. ALL THE TABLES LIKE THIS ONE WILL BE REPLACED.\n",
     "\n",
     "| You Are... | Best Tutorials |\n",
     "| :--------- | :------------- |\n",
