First commit of the RLlib lessons

--- a/advanced-ray/00-Advanced-Ray-Overview.ipynb
+++ b/advanced-ray/00-Advanced-Ray-Overview.ipynb
@@ -64,7 +64,9 @@
     "| 01 | [Why Ray?](01-Why-Ray.ipynb) | Start in this notebook if you want an explanation of the origin and motivations for Ray. |\n",
     "| 02 | [Ray Tasks Revisited](02-Ray-Tasks-Revisited.ipynb) | More exploration of `ray.wait()` usage patterns, task dependencies and their management, task profiling techniques, and task scheduling. |\n",
     "| 03 | [Ray Actors Revisited](03-Ray-Actors-Revisited.ipynb) | A more in-depth look at Actor scheduling under the hood and profiling performance using the _Ray Dashboard_. |\n",
-    "| 04 | [Exploring Ray API Calls](04-Exploring-Ray-API-Calls.ipynb) | The Ray API has other API calls for more advanced scenarios, which are surveyed in this optional lesson. Options you can pass to the API calls already learned are explored. |"
+    "| 04 | [Exploring Ray API Calls](04-Exploring-Ray-API-Calls.ipynb) | The Ray API has other API calls for more advanced scenarios, which are surveyed in this optional lesson. Options you can pass to the API calls already learned are explored. |\n",
+    "\n",
+    "In addition, exercise solutions for this tutorial can be found [here](solutions/solutions.ipynb)."
    ]
   },
   {
