--- a/ray-crash-course/03-Adopting-Ray.ipynb
+++ b/ray-crash-course/03-Adopting-Ray.ipynb
@@ -78,8 +78,14 @@
     "* See also the [Troubleshooting, Tips, and Tricks](reference/Troubleshooting-Tips-Tricks.ipynb) notebook\n",
     "\n",
     "Need help?\n",
-    "* [Ray Slack](https://ray-distributed.slack.com)\n",
-    "* [ray-dev Google group](https://groups.google.com/forum/?nomobile=true#!forum/ray-dev): not widely used.\n",
+    "\n",
+    "* [Ray Slack](https://ray-distributed.slack.com) - Sign up [here](https://forms.gle/9TSdDYUgxYs8SA9e8)\n",
+    "* [ray-dev Google group](https://groups.google.com/forum/?nomobile=true#!forum/ray-dev) - Not widely used\n",
+    "\n",
+    "For updates on Ray:\n",
+    "\n",
+    "* [Ray Slack](https://ray-distributed.slack.com) - Sign up [here](https://forms.gle/9TSdDYUgxYs8SA9e8)\n",
+    "* [Twitter](https://twitter.com/raydistributed)\n",
     "\n",
     "TBD more content..."
    ]
