--- a/Overview.ipynb
+++ b/Overview.ipynb
@@ -22,7 +22,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Getting Help and a Request\n",
+    "## Getting Help\n",
     "\n",
     "This is an early release of these tutorials. Please report any issues!\n",
     "\n",
@@ -157,7 +157,16 @@
     "\n",
     "_Ray RLlib_ is Ray's system for _reinforcement learning_. This tutorial begins with a \"crash course\" in RL concepts. It then explores several of the commonly-used algorithms and approaches for different applications.\n",
     "\n",
-    "This tutorial will be released soon."
+    "Note that the `04a-04c` lessons can be studied in any order.\n",
+    "\n",
+    "* [00: Ray RLlib Overview](rllib/00-Ray-RLlib-Overview.iypnb) -- Overview of this tutorial.\n",
+    "* [01: Introduction to Reinforcement Learning](rllib/01-Introduction-to-Reinforcement-Learning.ipynb) -- A quick introduction to the concepts of reinforcement learning, adapted from [`rllib_exercises`](https://github.com/ray-project/tutorial/blob/master/rllib_exercises/rllib_colab.ipynb) by @edoakes. You can skim or skip this lesson if you already understand RL concepts.\n",
+    "* [02: About RLlib](rllib/02-About-RLlib.ipynb) -- An introduction to RLlib, its goals and the capabilities it provides.\n",
+    "* [03: Application: Cart Pole](rllib/03-Application-Cart-Pole.ipynb) -- The best starting place for learning how to use RL, in this case to train a moving car to balance a vertical pole. Based on the `CartPole-v0` environment from OpenAI Gym, combined with RLlib.\n",
+    "* Other Application Examples. Do these lessons in any order:\n",
+    "  * [04a: Application: Mountain Car](rllib/04a-Application-Mountain-Car.ipynb) -- Based on the `MountainCar-v0` environment from OpenAI Gym.\n",
+    "  * [04b: Application: Taxi](rllib/04b-Application-Taxi.ipynb) -- Based on the `Taxi-v3` environment from OpenAI Gym.\n",
+    "  * [04c: Application: Frozen Lake](rllib/04c-Application-Frozen-Lake.ipynb) -- Based on the `FrozenLake-v0` environment from OpenAI Gym."
    ]
   },
   {
