Apparently the jupyter notebook alignment problem is now fixed

--- a/Overview.ipynb
+++ b/Overview.ipynb
@@ -41,18 +41,18 @@
     "\n",
     "Here is a recommended reading list, based on your interests:\n",
     "\n",
-    "> **TODO:** JUPYTER LAB FORCES RIGHT ALIGNMENT FOR TABLES, NEGATING THEIR UTILITY. ALL THE TABLES LIKE THIS ONE WILL BE REPLACED.\n",
+    "If you are a developer who is new to Ray, start with [_Ray Crash Course_](#user-content-ray-crash-course), then [_Advanced Ray_](#user-content-advanced-ray).\n",
     "\n",
-    "| You Are... | Best Tutorials |\n",
-    "| :--------- | :------------- |\n",
-    "| A developer who is new to Ray | First, [_Ray Crash Course_](#user-content-ray-crash-course), then [_Ray Core - Advanced_](#user-content-ray-core---advanced) |\n",
-    "| A developer who is experienced with Ray | [_Ray Core - Advanced_](#user-content-ray-core---advanced) |\n",
-    "| A developer or data scientist interested in Reinforcement Learning | [_Ray RLlib_](#user-content-ray-rllib) |\n",
-    "| A developer or data scientist interested in Hyperparameter Tuning  | [_Ray Tune_](#user-content-ray-tune) |\n",
-    "| A developer or data scientist interested in accelerated model training with PyTorch  | [_Ray SGD_](#user-content-ray-sgd) |\n",
-    "| A developer or data scientist interested in model serving | [_Ray Serve_](#user-content-ray-serve) |\n",
+    "If you are a developer who is experienced with Ray, go straight to [_Advanced Ray_](#user-content-advanced-ray).\n",
     "\n",
-    "> **Note:** Older Ray tutorials can be found in the [this repo](https://github.com/ray-project/tutorial). They cover topics not yet covered by the Anyscale Academy."
+    "If you are either a developer or a data scientist interested in one of the following topics:\n",
+    "\n",
+    "* Reinforcement Learning: see [_Ray RLlib_](#user-content-ray-rllib)\n",
+    "* Hyperparameter Tuning: see [_Ray Tune_](#user-content-ray-tune)\n",
+    "* Accelerated model training with PyTorch: see [_Ray SGD_](#user-content-ray-sgd)\n",
+    "* Model serving: see [_Ray Serve_](#user-content-ray-serve)\n",
+    "\n",
+    "> **Note:** Older Ray tutorials can be found in the [this repo](https://github.com/ray-project/tutorial). They cover topics not yet available here."
    ]
   },
   {
@@ -89,13 +89,11 @@
    "source": [
     "### Reference\n",
     "\n",
-    "Directory: `reference`\n",
+    "**Directory:** `reference`\n",
     "\n",
     "The notebooks here provide reference material, like general tips and tricks, how to get help, and troubleshooting issues.\n",
     "\n",
-    "| Lesson (Notebook)                                            | Description                                               |\n",
-    "| :----------------------------------------------------------- | :-------------------------------------------------------- |\n",
-    "| [Troubleshooting, Tips, and Tricks](reference/Troubleshooting-Tips-Tricks.ipynb) | How to troubleshoot common problems and other useful tips and tricks. |"
+    "* [Troubleshooting, Tips, and Tricks](reference/Troubleshooting-Tips-Tricks.ipynb): How to troubleshoot common problems and other useful tips and tricks."
    ]
   },
   {
@@ -104,25 +102,21 @@
    "source": [
     "### Ray Crash Course\n",
     "\n",
-    "| About | Details |\n",
-    "| :----- | :------------ |\n",
-    "| _Directory:_ | `ray-crash-course` |\n",
-    "| _Audience:_ | You are a developer who wants a fast introduction to the core Ray API. Experienced developers should go to [_Ray Core - Advanced_](#user-content-ray-core---advanced). Data scientists may wish to skip to [_Ray RLlib_](#user-content-ray-rllib), [_Ray Tune_](#user-content-ray-tune), [_Ray SGD_](#user-content-ray-sgd), or [_Ray Serve_](#user-content-ray-serve). |\n",
+    "**Directory:** `ray-crash-course`\n",
     "\n",
+    "**Audience:** You are a developer who wants a fast introduction to the core Ray API. Experienced developers should go to [_Advanced Ray_](#user-content-advanced-ray). Data scientists may wish to skip to [_Ray RLlib_](#user-content-ray-rllib), [_Ray Tune_](#user-content-ray-tune), [_Ray SGD_](#user-content-ray-sgd), or [_Ray Serve_](#user-content-ray-serve).\n",
     "\n",
     "This is the place to start if you are new to Ray and you plan to use it to scale Python applications to a cluster. Data scientists working with Ray-based toolkits, like _RLlib_, don't need this knowledge to get started.\n",
     "\n",
-    "The _crash course_ is intended to focus on learning the core API as quickly as possible, but using nontrivial examples. In contrast, the [_Ray Core - Advanced_](#user-content-ray-core---advanced) tutorial begins with an explanation of why Ray was created, what problems it solves, and then dives into more advanced API usage, profiling and debugging applications, and how Ray works behind the scenes.\n",
+    "The _crash course_ is intended to focus on learning the core API as quickly as possible, but using nontrivial examples. In contrast, the [_Advanced Ray_](#user-content-advanced-ray) tutorial begins with an explanation of why Ray was created, what problems it solves, and then dives into more advanced API usage, profiling and debugging applications, and how Ray works behind the scenes.\n",
     "\n",
-    "| #  | Lesson | Description |\n",
-    "| :- | :----- | :---------- |\n",
-    "| 00 | [Overview](ray-crash-course/00-Ray-Crash-Course-Overview.ipynb) | A _table of contents_ for this tutorial. |\n",
-    "| 01 | [Ray Crash Course: Tasks](ray-crash-course/01-Ray-Crash-Course-Tasks.ipynb) | Understanding how Ray converts normal Python functions into distributed _stateless tasks_. |\n",
-    "| 02 | [Ray Crash Course: Actors](ray-crash-course/02-Ray-Crash-Course-Actors.ipynb) | Understanding how Ray converts normal Python classes into distributed, _stateful actors_. |\n",
-    "| 03 | [Adopting Ray](03-Adopting-Ray.ipynb)             | Ray drop-in replacements for common parallelism APIs, about the Ray community, etc. |\n",
-    "| 04 | [Running Ray Clusters](04-Running-Ray-Clusters.ipynb) | How to run Ray in a clustered environment, submit your work to it, and integrate with your local development process. |\n",
+    "* 00 - [Overview](ray-crash-course/00-Ray-Crash-Course-Overview.ipynb): A _table of contents_ for this tutorial.\n",
+    "* 01 - [Ray Crash Course: Tasks](ray-crash-course/01-Ray-Crash-Course-Tasks.ipynb): Understanding how Ray converts normal Python functions into distributed _stateless tasks_.\n",
+    "* 02 - [Ray Crash Course: Actors](ray-crash-course/02-Ray-Crash-Course-Actors.ipynb): Understanding how Ray converts normal Python classes into distributed, _stateful actors_.\n",
+    "* 03 - [Adopting Ray](03-Adopting-Ray.ipynb): Ray drop-in replacements for common parallelism APIs, about the Ray community, etc.\n",
+    "* 04 - [Running Ray Clusters](04-Running-Ray-Clusters.ipynb): How to run Ray in a clustered environment, submit your work to it, and integrate with your local development process.\n",
     "\n",
-    "Once you've completed this tutorial, go through [_Ray Core - Advanced_](#user-content-ray-core---advanced) or explore one of the ML-related library tutorials, in any order."
+    "Once you've completed this tutorial, go through [_Advanced Ray_](#user-content-advanced-ray) or explore one of the ML-related library tutorials, in any order."
    ]
   },
   {
@@ -133,9 +127,7 @@
     "\n",
     "Directory: `advanced-ray`\n",
     "\n",
-    "Go through the [_Crash Course_](#ray-crash-course) first if you are new to Ray. Then return to this tutorial, which begins with an explanation of why Ray was created, what problems it solves, and then dives into more advanced API usage, profiling and debugging applications, and how Ray works behind the scenes.\n",
-    "\n",
-    "This is the place to start. This tutorial introduces you to Ray, why it was created, what problems it solves, how to use it, and how it works behind the scenes.\n",
+    "Go through the [_Crash Course_](#ray-crash-course) first if you are new to Ray. This tutorial provides more background information about Ray, such as why it was created and the problems it solves, and then dives into more advanced API usage, profiling and debugging applications, and how Ray works behind the scenes.\n",
     "\n",
     "\n",
     "| #  | Lesson | Description |\n",
@@ -144,7 +136,9 @@
     "| 01 | [Why Ray?](advanced-ray/01-Why-Ray.ipynb) | Start in this notebook if you want an explanation of the origin and motivations for Ray. |\n",
     "| 02 | [Ray Tasks Revisited](advanced-ray/02-Ray-Tasks-Revisited.ipynb) | More exploration of `ray.wait()` usage patterns, task dependencies and their management, task profiling techniques, and task scheduling. |\n",
     "| 03 | [Ray Actors Revisited](advanced-ray/03-Ray-Actors-Revisited.ipynb) | A more in-depth look at Actor scheduling under the hood and profiling performance using the _Ray Dashboard_. |\n",
-    "| 04 | [Exploring Ray API Calls](advanced-ray/04-Exploring-Ray-API-Calls.ipynb) | The Ray API has other API calls for more advanced scenarios, which are surveyed in this optional lesson. Options you can pass to the API calls already learned are explored. |"
+    "| 04 | [Exploring Ray API Calls](advanced-ray/04-Exploring-Ray-API-Calls.ipynb) | The Ray API has other API calls for more advanced scenarios, which are surveyed in this optional lesson. Options you can pass to the API calls already learned are explored. |\n",
+    "\n",
+    "In addition, exercise solutions for this tutorial can be found [here](advanced-ray/solutions/solutions.ipynb)."
    ]
   },
   {
@@ -159,14 +153,19 @@
     "\n",
     "Note that the `04a-04c` lessons can be studied in any order.\n",
     "\n",
-    "* [00: Ray RLlib Overview](rllib/00-Ray-RLlib-Overview.iypnb) -- Overview of this tutorial.\n",
-    "* [01: Introduction to Reinforcement Learning](rllib/01-Introduction-to-Reinforcement-Learning.ipynb) -- A quick introduction to the concepts of reinforcement learning, adapted from [`rllib_exercises`](https://github.com/ray-project/tutorial/blob/master/rllib_exercises/rllib_colab.ipynb) by @edoakes. You can skim or skip this lesson if you already understand RL concepts.\n",
-    "* [02: About RLlib](rllib/02-About-RLlib.ipynb) -- An introduction to RLlib, its goals and the capabilities it provides.\n",
-    "* [03: Application: Cart Pole](rllib/03-Application-Cart-Pole.ipynb) -- The best starting place for learning how to use RL, in this case to train a moving car to balance a vertical pole. Based on the `CartPole-v0` environment from OpenAI Gym, combined with RLlib.\n",
-    "* Other Application Examples. Do these lessons in any order:\n",
-    "  * [04a: Application: Mountain Car](rllib/04a-Application-Mountain-Car.ipynb) -- Based on the `MountainCar-v0` environment from OpenAI Gym.\n",
-    "  * [04b: Application: Taxi](rllib/04b-Application-Taxi.ipynb) -- Based on the `Taxi-v3` environment from OpenAI Gym.\n",
-    "  * [04c: Application: Frozen Lake](rllib/04c-Application-Frozen-Lake.ipynb) -- Based on the `FrozenLake-v0` environment from OpenAI Gym."
+    "|     | Lesson | Description |\n",
+    "| :-- | :----- | :---------- |\n",
+    "| 00  | [Ray RLlib Overview](rllib/00-Ray-RLlib-Overview.iypnb) | Overview of this tutorial. |\n",
+    "| 01  | [Introduction to Reinforcement Learning](rllib/01-Introduction-to-Reinforcement-Learning.ipynb) | A quick introduction to the concepts of reinforcement learning,  by @edoakes. You can skim or skip this lesson if you already understand RL concepts. |\n",
+    "| 02  | [About RLlib](rllib/02-About-RLlib.ipynb) | An introduction to RLlib, its goals and the capabilities it provides. |\n",
+    "| 03  | [Application: Cart Pole](rllib/03-Application-Cart-Pole.ipynb) | The best starting place for learning how to use RL, in this case to train a moving car to balance a vertical pole. Based on the `CartPole-v0` environment from OpenAI Gym, combined with RLlib. |\n",
+    "| 04a | [Application: Mountain Car](rllib/04a-Application-Mountain-Car.ipynb) | Based on the `MountainCar-v0` environment from OpenAI Gym. |\n",
+    "| 04b | [Application: Taxi](rllib/04b-Application-Taxi.ipynb) | Based on the `Taxi-v3` environment from OpenAI Gym. |\n",
+    "| 04c | [Application: Frozen Lake](rllib/04c-Application-Frozen-Lake.ipynb) | Based on the `FrozenLake-v0` environment from OpenAI Gym. |\n",
+    "\n",
+    "In addition, exercise solutions for this tutorial can be found [here](rllib/solutions/solutions.ipynb).\n",
+    "\n",
+    "For earlier versions of some of these tutorials, see [`rllib_exercises`](https://github.com/ray-project/tutorial/blob/master/rllib_exercises/rllib_colab.ipynb) in the original [github.com/ray-project/tutorial](https://github.com/ray-project/tutorial) project."
    ]
   },
   {
