--- a/rllib/00-Ray-RLlib-Overview.ipynb
+++ b/rllib/00-Ray-RLlib-Overview.ipynb
@@ -28,15 +28,19 @@
    "source": [
     "Here are the lessons. Note that the `04a-04c` lessons can be studied in any order.\n",
     "\n",
-    "* [00: Ray RLlib Overview](00-Ray-RLlib-Overview.iypnb) -- Overview of this tutorial.\n",
-    "* [01: Introduction to Reinforcement Learning](01-Introduction-to-Reinforcement-Learning.ipynb) -- A quick introduction to the concepts of reinforcement learning, adapted from [`rllib_exercises`](https://github.com/ray-project/tutorial/blob/master/rllib_exercises/rllib_colab.ipynb) by @edoakes. You can skim or skip this lesson if you already understand RL concepts.\n",
-    "* [02: About RLlib](02-About-RLlib.ipynb) -- An introduction to RLlib, its goals and the capabilities it provides.\n",
-    "* [03: Application: Cart Pole](03-Application-Cart-Pole.ipynb) -- The best starting place for learning how to use RL, in this case to train a moving car to balance a vertical pole. Based on the `CartPole-v0` environment from OpenAI Gym, combined with RLlib.\n",
-    "* Other Application Examples. Do these lessons in any order:\n",
-    "  * [04a: Application: Mountain Car](04a-Application-Mountain-Car.ipynb) -- Based on the `MountainCar-v0` environment from OpenAI Gym.\n",
-    "  * [04b: Application: Taxi](04b-Application-Taxi.ipynb) -- Based on the `Taxi-v3` environment from OpenAI Gym.\n",
-    "  * [04c: Application: Frozen Lake](04c-Application-Frozen-Lake.ipynb) -- Based on the `FrozenLake-v0` environment from OpenAI Gym.\n",
-    "In addition, exercise solutions for this tutorial can be found [here](solutions/solutions.ipynb)."
+    "|     | Lesson | Description |\n",
+    "| :-- | :----- | :---------- |\n",
+    "| 00  | [Ray RLlib Overview](00-Ray-RLlib-Overview.iypnb) | Overview of this tutorial. |\n",
+    "| 01  | [Introduction to Reinforcement Learning](01-Introduction-to-Reinforcement-Learning.ipynb) | A quick introduction to the concepts of reinforcement learning. You can skim or skip this lesson if you already understand RL concepts. |\n",
+    "| 02  | [About RLlib](02-About-RLlib.ipynb) | An introduction to RLlib, its goals and the capabilities it provides. |\n",
+    "| 03  | [Application: Cart Pole](03-Application-Cart-Pole.ipynb) | The best starting place for learning how to use RL, in this case to train a moving car to balance a vertical pole. Based on the `CartPole-v0` environment from OpenAI Gym, combined with RLlib. |\n",
+    "| 04a | [Application: Mountain Car](04a-Application-Mountain-Car.ipynb) | Based on the `MountainCar-v0` environment from OpenAI Gym. |\n",
+    "| 04b | [Application: Taxi](04b-Application-Taxi.ipynb) | Based on the `Taxi-v3` environment from OpenAI Gym. |\n",
+    "| 04c | [Application: Frozen Lake](04c-Application-Frozen-Lake.ipynb) | Based on the `FrozenLake-v0` environment from OpenAI Gym. |\n",
+    "\n",
+    "In addition, exercise solutions for this tutorial can be found [here](solutions/solutions.ipynb).\n",
+    "\n",
+    "For earlier versions of some of these tutorials, see [`rllib_exercises`](https://github.com/ray-project/tutorial/blob/master/rllib_exercises/rllib_colab.ipynb) in the original [github.com/ray-project/tutorial](https://github.com/ray-project/tutorial) project."
    ]
   },
   {
