Reorganized images. Begin support for Anyscale product

--- a/rllib/01-Introduction-to-Reinforcement-Learning.ipynb
+++ b/rllib/01-Introduction-to-Reinforcement-Learning.ipynb
@@ -56,7 +56,7 @@
     "\n",
     "Consider the following image:\n",
     "\n",
-    "![RL Concepts](../images/RL-concepts.png)\n",
+    "![RL Concepts](../images/rllib/RL-concepts.png)\n",
     "\n",
     "In RL, an **agent** interacts with an **environment** to maximize a **reward**. The agent makes **observations** about the **state** of the environment and takes **actions** that it believes will maximize the long-term reward. However, at the moment, it can only observe the immediate reward and it remembers past rewards. So, the training process usually involves lots and lot of reply of the game, the robot simulator traversing a virtual space, etc., so the agent can learn from repeated trials what decisions/actions work best to maximal the long-term reward."
    ]
@@ -67,12 +67,12 @@
    "source": [
     "RL has many applications, most famously these:\n",
     "\n",
-    "![Alpha Go](../images/alpha-go.png)\n",
-    "![Game](../images/game.png)\n",
-    "![Robot Arm](../images/robot-arm.gif)\n",
-    "![Walking Man](../images/walking-man.gif)\n",
-    "![Autonomous Vehicle](../images/autonomous-vehicle.jpeg)\n",
-    "![Two-legged Robot](../images/two-legged-robot.jpeg)\n"
+    "![Alpha Go](../images/rllib/alpha-go.png)\n",
+    "![Game](../images/rllib/game.png)\n",
+    "![Robot Arm](../images/rllib/robot-arm.gif)\n",
+    "![Walking Man](../images/rllib/walking-man.gif)\n",
+    "![Autonomous Vehicle](../images/rllib/autonomous-vehicle.jpeg)\n",
+    "![Two-legged Robot](../images/rllib/two-legged-robot.jpeg)\n"
    ]
   },
   {
@@ -151,7 +151,7 @@
     "\n",
     "The `gym` Python module provides MDP interfaces to a variety of simulators. For example, the CartPole environment interfaces with a simple simulator that simulates the physics of balancing a pole on a cart. The CartPole problem is described at https://gym.openai.com/envs/CartPole-v0. Here is an image from that website:\n",
     "\n",
-    "![Cart Pole](../images/Cart-Pole.png)"
+    "![Cart Pole](../images/rllib/Cart-Pole.png)"
    ]
   },
   {
@@ -476,7 +476,7 @@
     "\n",
     "PPO works in two phases. In one phase, a large number of rollouts are performed (in parallel). The rollouts are then aggregated on the driver and a surrogate optimization objective is defined based on those rollouts. We then use SGD (_stochastic gradient descent_) to find the policy that maximizes that objective with a penalty term for diverging too much from the current policy.\n",
     "\n",
-    "![PPO](../images/ppo.png)\n",
+    "![PPO](../images/rllib/ppo.png)\n",
     "\n",
     "([source](https://raw.githubusercontent.com/ucbrise/risecamp/risecamp2018/ray/tutorial/rllib_exercises/))\n",
     "\n",
